Fixed Cast / Director layout issues in Gaya

--- a/trunk/templates/default/css/default.css
+++ b/trunk/templates/default/css/default.css
@@ -142,13 +142,12 @@ table.detail   { margin:0; border-spacing:3px; padding:3px ; }
  color:#FF7777;
 }
 
-
-table.actors    { width:100%; }
-table.directors { width:100%; }
-table.writers   { width:100%; }
-table.actors    td { font-size:100%; text-align:center; }
-table.directors td { font-size:100%; text-align:center; }
-table.writers   td { font-size:100%; text-align:center; }
+table.actors    { width:500px; }
+table.directors { width:250px; }
+table.writers   { width:250px; }
+table.actors    td { font-size:100%; text-align:left; }
+table.directors td { font-size:100%; text-align:left; }
+table.writers   td { font-size:100%; text-align:left; }
 
 /*
 vi:ts=4:sw=4:et:syntax=css
